<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="version">2.1.2beta</string>
    <string name="stopwatch_activity">Stopwatch</string>
    <string name="stopwatch_pause">Pause</string>
    <string name="stopwatch_start">Start</string>
    <string name="stopwatch_lap">Lap</string>
    <string name="stopwatch_reset">Reset</string>
    <string name="timer_add">Add</string> 
    <string name="timer_label">TIMER</string>
    <string name="stopwatch_label">STOPWATCH</string>
    <string name="add_label">NEW TIMER</string>
    <string name="add_save">Save</string>
    <string name="add_new_timer">New timer</string>
    <string name="add_repeat1">Repeat</string>
    <string name="add_repeat2">Re-run timer in HH:MM:SS after last run</string>
    <string name="add_repeat_state1">\u2573</string>
    <string name="add_repeat_state2">\u2713</string>     
    <string name="time_day1">day</string>
    <string name="time_day2">days</string>
    <string name="time_day3">days</string>
    <string name="time_hour1">hour</string>
    <string name="time_hour2">hours</string>
    <string name="time_hour3">hours</string>
    <string name="notification_timer">Timer is active</string>
    <string name="notification_stopwatch1">Stopwatch is active</string>
    <string name="notification_stopwatch2">Laps</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_changelog">Changelog</string>
    <string name="changelog_last">Last</string>
    <string name="changelog_all">All</string>
    <string name="timer_list_unrepeat">Timer doesn\u0027t repeat</string>
    
    <string name="about">Stopwatch \u0026 Timer</string>
    <string name="about1">About</string>
    <string name="about2">More info about project</string>
    <string name="about_translate">Translations</string>
    <string name="about_copyright">Copyright</string>
    <string name="about_version">Version / Changelog</string>
    
    <string name="feedback1">Feedback</string> 
    <string name="feedback2">Feedback form with the author</string> 
    
    <string name="locale1">Localisation</string> 
    <string name="locale2">Force changing of widget localisation</string> 
    <string name="locale_toast">To implement these changes, restart the program</string>
    
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="behavior">Behavior</string>
    <string name="notifications">Notifications</string>
    
    <string name="stopwatch">Stopwatch</string>
    <string name="timer">Timer</string>
    
    <string name="timer_sound1">Sound</string>
    <string name="timer_sound2">Play the sound of the timer</string>
    <string name="timer_vibro1">Vibration</string>
    <string name="timer_vibro2">Vibrate at the end of the timer</string>
    <string name="timer_wakelock1">Wake Lock</string>
    <string name="timer_wakelock2">Experimental! May increase battery usage, but improve stability</string>
    <string name="timer_notifications1">Notifications</string>
    <string name="timer_notifications2">Show notification while timer is active</string>
    <string name="timer_notifications3">Show notification while stopwatch is active</string>
    
    <string name="stopwatch_textmode3">Showing full time</string>
    <string name="stopwatch_textmode2">Showing lap time</string>
    <string name="stopwatch_textmode1">Lap time</string>
</resources>